--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="./assets/images.png" alt="Logo" width="50" height="30" class="d-inline-block align-top" loading="lazy">
+      <img src="https://github.com/farukh1330/Grid-assignment/blob/main/images.png" alt="Logo" width="50" height="30" class="d-inline-block align-top" loading="lazy">
       
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
 <div class="container content-body">
   <div class="row">
     <div class="col-lg-12">
-      <img src="./assets/download.png.jpg" class="img-fluid" alt="Sample Image">
+      <img src="https://github.com/farukh1330/Grid-assignment/blob/main/download.png.jpg" class="img-fluid" alt="Sample Image">
     </div>
   </div>
   <div class="row mt-4 text-center">
